--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       <button onclick="window.location.href='https://aldo9253.github.io/trainingtimer/'">Training Timer</button>
       <p>Here is a training timer for dry fire drills. Highly variable!</p>
     </div>
+    </div>
+    <div class="column">
+      <button onclick="window.location.href='https://aldo9253.github.io/wordle/'">Wordle</button>
+      <p>Free, no BS, wordle, for entertainment when the match is running slow.</p>
+    </div>
   </div>
 </body>
 </html>
